# llm-pareto-controller

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  EXPERIMENTS.md  README.md  SPEC.md  TASK.md  TASKS.md  TECH_STACK.md  collect_summaries.py  dwta_hard_seed2024_comparison.csv  extract_seed100.py  main.py  make_dwta_method_template.py  make_dwta_run_config.py  make_seed_config.py  pyproject.toml  requirements.txt  run_all_seeds.bat  run_dwta_all_seeds.bat  run_dwta_hard_all_seeds.bat  run_dwta_large_all_seeds.bat
controller/: __init__.py  closed_loop.py  control_semantics.py  operator_space.py
docs/: audit_findings_2026-03-13.md  experiment_plan_comparison_ablation_2026-03-27.md  implementation_status_2026-03-27.md
eval/: __init__.py  metrics.py  reference_front.py
experiments/: __init__.py  export_results.py  logging.py  matrix.py  postprocess_matched.py  run_matrix.py
infra/: __init__.py  llm_client.py  storage.py
llm/: __init__.py  actuator.py  analyst.py  strategist.py
memory/: __init__.py  experience_pool.py
optimizers/: __init__.py
problems/: __init__.py
sensing/: __init__.py  feasibility_metrics.py  hypervolume.py  pareto_state.py
src/: __init__.py
tests/: __init__.py  test_ablation_matrix_specs.py  test_actuator.py  test_baseline_runner.py  test_bootstrap.py  test_closed_loop.py  test_complex_benchmarks.py  test_control_semantics.py  test_dwta_evaluation.py  test_dwta_live_cache.py  test_dwta_minimum_suite.py  test_dwta_problem.py  test_dwta_runtime_smoke.py  test_dwta_scenario_builder.py  test_dwta_stage3_package.py  test_eval_metrics.py  (+23 more)
(+454 files in other folders)
