[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pareto-controller"
version = "0.1.0"
description = "Research project for LLM-guided NSGA-II task assignment optimization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LLM-Pareto-Controller Contributors" }]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "httpx>=0.27",
  "tenacity>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
